--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,18 +26,18 @@ body{
 }
 
 .content{
-		background-color: #ffffff;
-		padding-bottom: 30px;
+	background-color: #ffffff;
+	padding-bottom: 30px;
 }
 
 nav{
 	position: fixed;
-	display: flex;
-	justify-content: space-around;
-	width: 100%;
 	background-color: rgba(161,128,97,0.9);
-	padding-bottom: 15px;
-	padding-top: 15px;
+	width: 100%;
+	position: fixed;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	text-align: center;
 	text-transform: uppercase;
 	z-index: 10;
 }
@@ -48,16 +48,17 @@ nav a{
 	font-weight: 700;
 }
 
+.fa-bars{
+	color: #000000;
+	padding-top: 5px;
+}
+
 nav a:hover{
 	text-decoration: underline;
 }
 
 p{
 	margin-bottom: 15px;
-}
-
-#contact{
-	padding-bottom: 25px;
 }
 
 #typewriter{
@@ -113,29 +114,77 @@ h2{
 	padding-bottom: 75px;
 }
 
+#lebenslauf h4{
+	text-align: center;
+}
+
+#lebenslauf h3{
+	margin-bottom: 25px;
+}
+
+#lebenslauf > h3:nth-of-type(2){
+	margin-top: 25px;
+}
+
+#lebenslauf p{
+	text-align: center;
+	margin-bottom: 10px;
+}
+
+.item{
+	padding-bottom: 35px;
+	max-width: 500px;
+	margin: 0 auto;
+}
+
 .portfolioContent{
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-around;
 }
 
+
 .portfolioContent > *{
 	position: relative;
 }
 
-.portfolioContent > *:after{
-	background-color: rgba(94,100,114,0.7);
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	display: block;
-	content: "";
+.moreInformation{
+	display: none;
+	background-color: rgba(161,128,97,0.93);
+	width: 100%;
+	height: 100%;
+	text-align: center;
 }
 
-.portfolioContent > *:hover:after{
-	background-color: transparent;
+.moreInformation p{
+	color: #000000;
+	font-weight: 400;
+	padding-top: 15px;
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
+.moreInformation a{
+	text-decoration: underline;
+}
+
+h3{
+	text-align: center;
+	color: #000000;
+	font-size: 40px;
+}
+
+.moreInformation a{
+	color: #000000;
+	font-weight: 400;
+}
+
+.moreInformation a:first-of-type{
+	margin-right: 50%;
+}
+
+.flex:hover .moreInformation{
+	display: block;
 }
 
 .flex{
@@ -189,8 +238,8 @@ h2{
 	background-position: center;
 }
 
-.design{
-	background: url(images/designklein.jpg);
+.showcase{
+	background: url(images/showcase.jpg);
 	background-position: center;
 }
 
@@ -203,20 +252,12 @@ a{
 	text-decoration: none;
 }
 
-.beispiel{
-	width: 100%;
-	height: 100%;
-	display: flex;
-	justify-content: space-around;
-	align-items: flex-end;
-	flex-wrap: wrap;
-	align-content: flex-end;
-}
 
 #skills{
 	width: 80%;
 	margin-left: auto;
 	margin-right: auto;
+	padding-bottom: 75px;
 }
 
 .skills{
@@ -277,17 +318,6 @@ textarea{
 	text-align: center;
 }
 
-/*.icons{
-	display: flex;
-	justify-content: space-evenly;
-	margin-bottom: 37.5px;
-	margin-top: 37.5px;
-	color: #A18061;
-	width: 25%;
-	margin-left: auto;
-	margin-right: auto;
-}*/
-
 .icon{
 	width: 75px;
 	margin-top: 15px;
@@ -322,6 +352,28 @@ a{
 	font-size: 13px;
 	font-family: 'Montserrat', sans-serif;
 	color: #a18061;
+}
+
+.impressumKomplett{
+	max-width: 800px;
+	margin: 0 auto;
+	padding-top: 150px;
+}
+
+.impressumKomplett h1{
+	color: #000000;
+	font-size: 65px;
+	padding: 0;
+}
+
+.impressumKomplett h2{
+	color: #000000;
+	font-size: 40px;
+	padding: 0 0 35px 0;
+}
+
+#post, #error{
+	text-align: center;
 }
 
 @media(max-width: 1500px){
@@ -386,6 +438,22 @@ a{
 	}*/
 }
 
+@media(min-width: 601px){
+	.fa-bars{
+		display: none !important;
+	}
+	nav{
+		display: flex;
+		justify-content: space-between;
+	}
+	nav a:first-of-type{
+		margin-left: 15px;
+	}
+	nav a:last-of-type{
+		margin-right: 15px;
+	}
+}
+
 @media(max-width: 600px){
 	#portfolio{
 		width: 99%;
@@ -420,12 +488,38 @@ a{
 	#about{
 		width: 97%;
 	}
-	.beispiel .fab{
-		margin-top: 90%;
-	}
 	#skills{
 		width: 97%;
 		justify-content: space-evenly;
+	}
+
+	nav{
+		height: 24px;
+	}
+
+	nav a{
+		display: none;
+	}
+
+	.fa-bars {
+		z-index: 15;
+		position: fixed;
+		margin-left: 90%;
+	}
+	.navigation{
+		padding-top: 0px;
+	}
+
+	.navigation.responsive a{
+		float: none;
+		display: block;
+		text-align: left;
+		padding: 5px;
+		background-color: rgb(161,128,97);
+		margin: 0;
+	}
+	nav{
+		background-color: rgb(161,128,97);
 	}
 }
 
@@ -446,10 +540,7 @@ a{
 		padding-bottom: 45px;
 		padding-top: 45px;
 	}
-/*	.beispiel .fab{
-		margin-top: 90%;
-	}
-	#about{
+/*	#about{
 		width: 94%;
 	}*/
 	.skills{
